--- a/src/component/header_part_branding.css
+++ b/src/component/header_part_branding.css
@@ -25,10 +25,8 @@
   color: white;
   font-size: large;
   display: flex;
-  width: 150px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: 40px;
+  width: fit-content;
+  padding: 2px 50px 2px 50px;
   align-items: center;
   justify-content: center;
   text-align: center;
